// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Building Blocks CustomColumn building block CustomColumn detects macros:columns elements correctly: generate-custom-column-without-macros-columns 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:macrosTable=\\"sap.fe.macros.table\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table>
                <macros:columns>
                    <macros:Column/>
                    <macrosTable:Column header=\\"CustomColumnTitle2\\" importance=\\"High\\" placement=\\"After\\" key=\\"myColumnKey\\">
                        <core:Fragment fragmentName=\\"my.test.App.ext.fragment.CustomColumnTitle2\\" type=\\"XML\\"/>
                    </macrosTable:Column>
                </macros:columns>
            </macros:Table>
        </content>
    </Page>
</mvc:View>"
`;

exports[`Building Blocks CustomColumn building block generate CustomColumn without macros:columns - should not update aggregation path: generate-custom-column-without-macros-columns 1`] = `
Object {
  "generate-custom-column-without-macros-columns/webapp/ext/fragment/CustomColumnTitle2.fragment.xml": Object {
    "contents": "<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>",
    "state": "modified",
  },
  "generate-custom-column-without-macros-columns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:macrosTable=\\"sap.fe.macros.table\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table>
                <macros:columns>
                    <macrosTable:Column header=\\"CustomColumnTitle2\\" importance=\\"High\\" placement=\\"After\\" key=\\"myColumnKey\\">
                        <core:Fragment fragmentName=\\"my.test.App.ext.fragment.CustomColumnTitle2\\" type=\\"XML\\"/>
                    </macrosTable:Column>
                </macros:columns>
            </macros:Table>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-custom-column-without-macros-columns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Do not update "manifest.json" with missing dependency when "allowAutoAddDependencyLib=false" 1`] = `
Object {
  "default": Object {
    "sap.app": Object {
      "id": "my.test.App",
    },
    "sap.ui5": Object {
      "dependencies": Object {
        "libs": Object {
          "sap.fe.core": Object {},
        },
        "minUI5Version": "1.127.0",
      },
    },
  },
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
  },
}
`;

exports[`Building Blocks FilterBar properties: filterbar-properties 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" search=\\"onSearch\\" filterChanged=\\"onFilterChanged\\" liveMode=\\"true\\" showClearButton=\\"false\\" showMessages=\\"true\\"/>
        </content>
    </Page>
</mvc:View>"
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate chart building block: generate-chart-with-id-no-macros-ns 1`] = `
Object {
  "generate-chart-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate field building block: generate-field-with-id-no-macros-ns 1`] = `
Object {
  "generate-field-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate filter-bar building block: generate-filter-bar-with-id-no-macros-ns 1`] = `
Object {
  "generate-filter-bar-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID and xml view without macros namespace generate table building block: generate-table-with-id-no-macros-ns 1`] = `
Object {
  "generate-table-with-id-no-macros-ns/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-id-no-macros-ns/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate chart building block: generate-chart-with-id 1`] = `
Object {
  "generate-chart-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate field building block: generate-field-with-id 1`] = `
Object {
  "generate-field-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate filter-bar building block: generate-filter-bar-with-id 1`] = `
Object {
  "generate-filter-bar-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with just ID generate table building block: generate-table-with-id 1`] = `
Object {
  "generate-table-with-id/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-id/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro5\\"
    contextPath=\\"/SessionMetrics\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro4\\"
    contextPath=\\"/Sessions/Speed\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters generate chart building block with metaPath as object. Relative: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testQualifier\\" contextPath=\\"/testEntitySet\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate chart building block with metaPath as object: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testQualifier\\" contextPath=\\"/testEntitySet\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate chart building block: generate-chart-with-optional-params 1`] = `
Object {
  "generate-chart-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Chart id=\\"testChart\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" filterBar=\\"testFilterBar\\" personalization=\\"testPersonalization\\" selectionMode=\\"MULTIPLE\\" selectionChange=\\"testOnSelectionChange\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-chart-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate field building block with metaPath as object: generate-field-with-optional-params 1`] = `
Object {
  "generate-field-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\" metaPath=\\"/testEntitySet/testQualifier\\" formatOptions=\\"{'displayMode':'Value'}\\" readOnly=\\"true\\" semanticObject=\\"testSemanticObject\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate field building block: generate-field-with-optional-params 1`] = `
Object {
  "generate-field-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Field id=\\"testField\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" formatOptions=\\"{'displayMode':'Value'}\\" readOnly=\\"true\\" semanticObject=\\"testSemanticObject\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-field-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block with metaPath as object. Relative: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"testQualifier\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block with metaPath as object: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"/testEntitySet/testQualifier\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate filter-bar building block: generate-filter-bar-with-optional-params 1`] = `
Object {
  "generate-filter-bar-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" search=\\"testOnSearch\\" filterChanged=\\"testOnFilterChanged\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-filter-bar-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate table building block with metaPath as object: generate-table-with-optional-params 1`] = `
Object {
  "generate-table-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\" metaPath=\\"/testEntitySet/testQualifier\\" busy=\\"true\\" enableAutoColumnWidth=\\"true\\" enableExport=\\"true\\" enableFullScreen=\\"true\\" enablePaste=\\"true\\" filterBar=\\"testFilterBar\\" header=\\"Test Header\\" headerVisible=\\"true\\" isSearchable=\\"true\\" personalization=\\"Column\\" readOnly=\\"true\\" type=\\"ResponsiveTable\\" variantManagement=\\"None\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters generate table building block: generate-table-with-optional-params 1`] = `
Object {
  "generate-table-with-optional-params/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:Table id=\\"testTable\\" metaPath=\\"testMetaPath\\" contextPath=\\"testContextPath\\" busy=\\"true\\" enableAutoColumnWidth=\\"true\\" enableExport=\\"true\\" enableFullScreen=\\"true\\" enablePaste=\\"true\\" filterBar=\\"testFilterBar\\" header=\\"Test Header\\" headerVisible=\\"true\\" isSearchable=\\"true\\" personalization=\\"Column\\" readOnly=\\"true\\" type=\\"ResponsiveTable\\" variantManagement=\\"None\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "generate-table-with-optional-params/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.127.0\\",
      \\"libs\\": {
        \\"sap.fe.core\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 1`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    filterBar=\\"testFilterBar\\"
    personalization=\\"testPersonalization\\"
    selectionMode=\\"MULTIPLE\\"
    selectionChange=\\"testOnSelectionChange\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 3`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"/REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 1`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    formatOptions=\\"{'displayMode':'Value'}\\"
    readOnly=\\"true\\"
    semanticObject=\\"testSemanticObject\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 3`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 1`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    search=\\"testOnSearch\\"
    filterChanged=\\"testOnFilterChanged\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 3`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 1`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    busy=\\"true\\"
    enableAutoColumnWidth=\\"true\\"
    enableExport=\\"true\\"
    enableFullScreen=\\"true\\"
    enablePaste=\\"true\\"
    filterBar=\\"testFilterBar\\"
    header=\\"Test Header\\"
    headerVisible=\\"true\\"
    isSearchable=\\"true\\"
    personalization=\\"Column\\"
    readOnly=\\"true\\"
    type=\\"ResponsiveTable\\"
    variantManagement=\\"None\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 3`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks generate Page building block with replace target locator set: generate-page-block 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <macros:Page id=\\"testPage\\" title=\\"Test Page Title\\" description=\\"Test Page Description\\"/>
</mvc:View>"
`;

exports[`Building Blocks generate building block with \`sap.fe.templates\` dependency: generate-filter-bar-templates-library-only 1`] = `
Object {
  "../../../../unit/sample/building-block/webapp-prompts/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "../../../../unit/sample/building-block/webapp-prompts/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"libs\\": {
        \\"sap.fe.templates\\": {},
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks generate building block without dependencies: generate-filter-bar-templates-library-only 1`] = `
Object {
  "../../../../unit/sample/building-block/webapp-prompts/webapp/ext/main/Main.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "../../../../unit/sample/building-block/webapp-prompts/webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"dependencies\\": {
      \\"libs\\": {
        \\"sap.fe.macros\\": {}
      }
    }
  },
  \\"default\\": {
    \\"sap.app\\": {
      \\"id\\": \\"my.test.App\\"
    },
    \\"sap.ui5\\": {
      \\"dependencies\\": {
        \\"minUI5Version\\": \\"1.127.0\\",
        \\"libs\\": {
          \\"sap.fe.core\\": {}
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Building Blocks generate building block, no fs 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>"
`;

exports[`Building Blocks generates Rich Text Editor building block with absolute binding context: generate-rich-text-editor-block 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:richtexteditor=\\"sap.fe.macros.richtexteditor\\">
    <VBox>
        <Text text=\\"Custom section\\"/>
        <macros:RichTextEditorWithMetadata metaPath=\\"/testEntitySet/testProperty\\" id=\\"testRichTextEditor\\"/>
    </VBox>
</core:FragmentDefinition>"
`;

exports[`Building Blocks throws error for Rich Text Editor building block if UI5 version is below 1.117.0: generate-rich-text-editor-block 1`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:richtexteditor=\\"sap.fe.macros.richtexteditor\\">
    <VBox>
        <Text text=\\"Custom section\\"/>
        <macros:RichTextEditorWithMetadata metaPath=\\"_testNavigation/testProperty\\" id=\\"testRichTextEditor\\"/>
    </VBox>
</core:FragmentDefinition>"
`;
